# reference-renamer

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PRODUCT_PLAN.md  PROMPT_WITH_TEMPLATE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-secure.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: publish.yml  tests.yml
docs/: CHANGELOG.md  PRD.md
reference_renamer/: __init__.py  __main__.py
reference_renamer/api/: arxiv.py  ollama.py  semantic_scholar.py
reference_renamer/cli/: main.py
reference_renamer/core/: change_logger.py  content_extractor.py  file_processor.py  filename_generator.py  metadata_enricher.py
reference_renamer/utils/: citations.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py  test_cli.py  test_filename_generator.py
